tests/sumo/errors/routes/stops/false_edge/vehroutes.sumo.meso
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2023-02-25 16:15:22 by Eclipse SUMO sumo Version v1_16_0+0724-a71e7a3dcde
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
This file may also be made available under the following Secondary
Licenses when the conditions for such availability set forth in the Eclipse
Public License 2.0 are satisfied: GNU General Public License, version 2
or later which is available at
https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net2.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <vehroute-output value="vehroutes.xml"/>
    </output>

    <processing>
        <default.speeddev value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <vehicle id="0" depart="0.00" arrival="14.00">
        <route edges="SC CN"/>
    </vehicle>

</routes>
